--- a/index.html
+++ b/index.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="result-con">
+        <div id="result">0</div>
+      </div>
+      <marquee>Made with ♡ <a href="http://m.me/shaishab316">S h a i s h a b</a> ♡</marquee>
+      <table class="key-pad">
+        <tr>
+          <td class="key key-num">7</td>
+          <td class="key key-num">8</td>
+          <td class="key key-num">9</td>
+          <td class="key key-op">÷</td>
+        </tr>
+        <tr>
+          <td class="key key-num">4</td>
+          <td class="key key-num">5</td>
+          <td class="key key-num">6</td>
+          <td class="key key-op">×</td>
+        </tr>
+        <tr>
+          <td class="key key-num">1</td>
+          <td class="key key-num">2</td>
+          <td class="key key-num">3</td>
+          <td class="key key-op">–</td>
+        </tr>
+        <tr>
+          <td class="key key-num">0</td>
+          <td class="key">.</td>
+          <td class="key key-op">+</td>
+          <td class="key key-re">=</td>
+        </tr>
+      </table>
+    </div>
 
-    
-   <script src="main.js"></script> 
-</body>
+    <script src="main.js"></script>
+  </body>
 </html>
