frist calculator done

--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
       <div class="result-con">
         <div id="result">0</div>
       </div>
-      <marquee>Made with ♡ <a href="http://m.me/shaishab316">S h a i s h a b</a> ♡</marquee>
+      <marquee
+        >Made with ♡
+        <a target="_blank" href="http://m.me/shaishab316">S h a i s h a b</a>
+        ♡</marquee
+      >
       <table class="key-pad">
+        <tr>
+            <td class="key key-cl">(</td>
+            <td class="key key-cl">)</td>
+            <td class="key key-cl  key-re">⌫</td>
+            <td class="key key-cl  key-re">AC</td>
+        </tr>
         <tr>
           <td class="key key-num">7</td>
           <td class="key key-num">8</td>
@@ -29,7 +39,7 @@
           <td class="key key-num">1</td>
           <td class="key key-num">2</td>
           <td class="key key-num">3</td>
-          <td class="key key-op">–</td>
+          <td class="key key-op">-</td>
         </tr>
         <tr>
           <td class="key key-num">0</td>
