--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <marquee
         >Made with ♡
-        <a target="_blank" href="http://m.me/shaishab316">S h a i s h a b</a>
+        <a target="_blank" href="https://web.facebook.com/shaishab316">S h a i s h a b</a>
         ♡</marquee
       >
       <table class="key-pad">
