--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <tr>
           <td class="key key-cl">(</td>
           <td class="key key-cl">)</td>
-          <td class="key key-cl key-re">⌫</td>
+          <td class="key key-cl key-re">C</td>
           <td class="key key-cl key-re">AC</td>
         </tr>
         <tr>
