--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <td class="key key-cl">(</td>
           <td class="key key-cl">)</td>
           <td class="key key-cl key-re">C</td>
-          <td class="key key-cl key-re">AC</td>
+          <td class="key key-cl key-re">A</td>
         </tr>
         <tr>
           <td class="key key-num">7</td>
